v. 1.1 (April 15, 2014)

Added Features
- EMG selection based on Analog Labels from each C3D input file 
- Added shoulder, elbow, and wrists JC, and setup files for Griffith University markerset
- Implemented C3D2MAT processing step using BTK to avoid C3Dserver platform 
  constrain (Matlab 32 bit on Windows) 
- Replaced 0 as markers missing value with NaN in the output .trc files

Restructuring
- Added src/shared folder to store functions common to several steps
- Renamed replaceWithNans.m as replaceMissingWithNaNs.m
- Renamed matfiltfilt2.m as ZeroLagButtFiltfilt.m

Other Changes
- Added memory of last path when selecting files from graphical user interfaces (GUIs)
- Removed warning messages caused by the lack of subject's first and last names when loading a predefined acquisition.xml 
- Modified data interpolation: markers trajectories are interpolated only if gaps of consecutive frames are shorter than a fixed number 
  defined according to the video frame rate (DataInterpolation.m)
- Modified data filtering: markers are filtered only when visible and only if they have no gaps (DataFiltering.m, ZeroLagButtFiltfilt.m)

Bug Fixes
- Modified filtering of data from force platform of type1: it filters only non zero values to avoid smoothing due to the outer zero values
 (data from force platform of type 1 are stored in C3D files after thresholding)
- Modified transformation of COP coordinates from local to global reference system: translation added only for COP non zero values.
- When running a predefined elaboration.xml, the GUIs asked for a new elaboration identifier that won't be used
Modified pop-up order in Elaboration and Static Interface: now user is asked to choose what to do 
(set a new elaboration, load and modify an old one or run one previously defined), and only after to insert 
the new elaboration identifier if it is the case 
- Corrected definition of interval where markers are visible in replaceMissingWithNaNs.m (modified computation of var 'index')
